--- a/HTML/Estructura-general.html
+++ b/HTML/Estructura-general.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina</title>
+    <title>Document</title>
 </head>
-<header>
-    <div class="loging">
-        <button>Logging</button>
-        <button>Sign Up</button>
-    </div>
-</header>
+<body>
+    
+</body>
 </html>
