--- a/HTML/!doctype.html
+++ b/HTML/!doctype.html
@@ -1,4 +1,5 @@
 <!-- https://developer.mozilla.org/es/docs/Glossary/Doctype -->
 
     <!DOCTYPE html>
-    <p>Doctype sirve para aclarar que version de html se esta utilizando</p>
+    
+    Doctype sirve para aclarar que version de html se esta utilizando
