--- a/HTML/a.html
+++ b/HTML/a.html
@@ -1,9 +1,10 @@
 <!-- https://developer.mozilla.org/es/docs/Web/HTML/Element/a -->
 
-<h1><a>Link</a></h1>
-<p>a sirve para crear enlaces.</p>
+<a> </a>
 
-<h3>Atributos</h3>
+a sirve para crear enlaces.
+Atributos:
+
 <a href="https://.......">Redirecciona a un enlace fuera de la pagina web</a>
 <a href="/url">Redirecciona a un enlace dentro de la pagina web</a>
 <a href="#">Te lleva a una id</a>
