--- a/HTML/html.html
+++ b/HTML/html.html
@@ -1,5 +1,7 @@
 <!-- https://developer.mozilla.org/es/docs/Web/HTML -->
 
      <html lang="es">
-         <p>Es la estructura de un sitio web. Se le agrega el atributo <strong>lang="es"</strong> para indicar el idioma.</p>
+         
      </html>
+
+     Es la estructura de un sitio web. Se le agrega el atributo lang="es" para indicar el idioma.
