--- a/HTML/main.html
+++ b/HTML/main.html
@@ -2,6 +2,8 @@
 
 <body>
     <main>
-        <p>main sirve para marcar el contenido principal del body.</p>
+        
     </main>
 </body>
+
+main sirve para marcar el contenido principal del body.
