--- a/HTML/header.html
+++ b/HTML/header.html
@@ -1,5 +1,7 @@
 <!-- https://developer.mozilla.org/es/docs/Web/HTML/Element/header -->
 
 <header>
-    <p>header se utiliza para marcar que parte del código es el encabezado</p>
+    
 </header>
+
+header se utiliza para marcar que parte del código es el encabezado
