--- a/Pruebas/index.html
+++ b/Pruebas/index.html
@@ -12,7 +12,7 @@
     <button><strong>Ingresar</strong></button>
     <br>
     <img src="../Pruebas/Imagenes/Sign Up.jpg" width="22" height="22"><input type="text" placeholder="Usuario"> <input type="password" placeholder="Contraseña">
-    <button><strong>Registrar</strong></button> 
+    <a href="/Pruebas/Registro.html" target="_blank"><button><strong>Registrar</strong></button></a>
 </header>
 
 <body>
