--- a/HTML/form.html
+++ b/HTML/form.html
@@ -3,3 +3,45 @@
 <form action=""></form>
 
 Sirve para crear un formulario. El atributo action="" indica una url a donde se dirigirá el formulario.
+
+<!-- https://developer.mozilla.org/es/docs/Web/HTML/Element/label -->
+
+<label></label>
+
+Etiqueta para un elemento en una interfaz de usuario.
+Sus atributos son:
+
+<label for=""> enlaza con una id </label>
+
+<!-- https://developer.mozilla.org/es/docs/Web/HTML/Element/input -->
+
+<input>
+Sirve para crear formularios.
+Sus atributos son:
+
+<input type="text"> sirve para colocar texto.
+<input type="password"> sirve para colocar una contraseña.
+<input type="email"> sirve para colocar un email.
+<input type="radio"> sirve para marcar una opción con un circulo.
+<input type="checkbox"> surve para marcar una opción con un recuadro.
+<input type="date"> crea un calendario.
+<input type="color"> sirve para seleccionar un color dentro de una paleta de colores.
+<input type="range"> sirve para crear una linea para marcar un rango.
+<input type="phone"> sirve para poner numeros telefonicos.
+<input placeholder=""> da detalle sobre que colocar en el input creado.
+<input name=""> sirve para crear un grupo de input.
+<input required> hace obligatorio el llenar un input.
+<input checked> marca un input de forma predefinida.
+<input value=""> le da un valor a un input para que lo lea el servidor cuando se utiliza radio o checkbox.
+
+
+<form action="">
+    <fieldset>
+        <legend>Login</legend>
+        <input type="text">
+        <input type="password">
+    </fieldset>
+</form>
+fieldset sirve para agrupar un conjunto de campos relacionados para un formulario.
+legend sirve para darle un encabezado a ese conjunto de campos relacionados en un formulario.
+
